<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.HomeWorkerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/data_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <ImageButton
        android:id="@+id/ibtnEditWorker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/editing"
        android:contextClickable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/tvName"
        android:focusable="true" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/firstName"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/tvLastName"
        app:layout_constraintTop_toTopOf="@+id/tvLastName" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/lastName"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPatronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/patronymic"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/mainText"
        app:layout_constraintStart_toStartOf="@+id/tvLastName"
        app:layout_constraintTop_toBottomOf="@+id/tvLastName" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        android:text="89654258842"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvLastName"
        app:layout_constraintTop_toBottomOf="@+id/tvLastName" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>