<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="0dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFioWorker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_margin"
            android:fontFamily="@font/montserrat_extrabold"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:visibility="visible"
            tools:text="TextView" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llFullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvWorkerLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin"
                android:fontFamily="@font/montserrat_extrabold"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                tools:text="@string/lastName" />

            <TextView
                android:id="@+id/tvWorkerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin"
                android:fontFamily="@font/montserrat_extrabold"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                tools:text="@string/firstName" />

            <TextView
                android:id="@+id/tvWorkerPartonymic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin"
                android:fontFamily="@font/montserrat_extrabold"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                tools:text="@string/patronymic" />
        </androidx.appcompat.widget.LinearLayoutCompat>




        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginBottom="@dimen/app_margin"
            android:fontFamily="@font/montserrat"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="TextView" />

    </LinearLayout>

</androidx.cardview.widget.CardView>